# rust-rocket

./: .env.example  .gitignore  Cargo.toml  Rocket.toml  diesel.toml
migrations/2024-10-01-091921_pt_account/: down.sql  up.sql
migrations/2024-10-01-095758_pt_feature/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  models.rs  schema.graphql  schema.rs
src/model/: mod.rs
src/model/lambda_handler/: mod.rs
src/model/lambda_handler/rocket_handler/: mod.rs
src/model/lambda_handler/rocket_handler/schema/: mod.rs
